<resources>
    <string name="app_name">everywhere</string>

    <string name="Hello_for_better_service">你好,为了更好的为你服务</string>
    <string name="add86">+86</string>
    <string name="Please_enter_phone_number">请输入手机号</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="Login_or_registration">登录或注册即同意到处旅行</string>
    <string name="user_agreement">用户协议</string>
    <string name="Please_log_in_and_travel_around">请登录到处旅行</string>
    <string name="or">- or -</string>
    <string name="wechat_login">微信登录</string>
    <string name="For_the_security_of_your_account">为了您的账号安全</string>
    <string name="Please_bind_your_mobile_phone_number">请绑定手机号</string>
    <string name="To_resend">重新发送(59s)</string>
    <string name="Please_enter_the_verification_code">请输入验证码</string>
    <string name="unknow_error">为知错误</string>
    <string name="conn_error">连接错误</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络出错</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">网络不能使用</string>
    <string name="Please_later">请稍后...</string>
    <string name="infrom">通知</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">消息</string>
    <string name="system_inform">系统通知</string>
    <string name="time">09/5/3</string>
    <string name="register_success">注册成功</string>
</resources>
