<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp_36"
    android:paddingLeft="@dimen/dp_23"
    android:background="@color/gF8F8F8"
    >
    <ImageView
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:background="@mipmap/back_white"
        />
    <TextView
        android:id="@+id/countdown"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/g999999"
        android:text="@string/To_resend"
        android:layout_marginRight="@dimen/dp_37"
        android:layout_width="@dimen/dp_108"
        android:layout_height="@dimen/dp_20"
        android:layout_alignParentRight="true"
        />
    <!--todo   修改字体大小 sp27  android:textSize="@dimen/sp_28"-->
    <TextView
        android:id="@+id/tv_verify"
        android:textColor="@color/g373737"
        android:textSize="@dimen/sp_28"
        android:text="@string/Please_enter_the_verification_code"
        android:layout_marginLeft="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_69"
        android:layout_width="@dimen/dp_170"
        android:layout_height="@dimen/dp_38" />
    <LinearLayout
        android:id="@+id/layout_num"
        android:layout_below="@id/tv_verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_80"
        >
        <EditText
            android:layout_marginLeft="@dimen/dp_21"
            android:textSize="@dimen/sp_30"
            android:gravity="center"
            android:id="@+id/et_one"
            android:numeric="integer"
            android:maxLength="1"
            android:layout_width="@dimen/dp_44"
            android:layout_height="@dimen/dp_56"
            android:background="@drawable/verify_code_box"
            />
        <EditText
            android:gravity="center"
            android:textSize="@dimen/sp_30"
            android:id="@+id/et_two"
            android:maxLength="1"
            android:numeric="integer"
            android:layout_marginLeft="@dimen/dp_37"
            android:layout_width="@dimen/dp_44"
            android:layout_height="@dimen/dp_56"
            android:background="@drawable/verify_code_box"
            />
        <EditText
            android:gravity="center"
            android:textSize="@dimen/sp_30"
            android:id="@+id/et_three"
            android:numeric="integer"
            android:maxLength="1"
            android:layout_marginLeft="@dimen/dp_37"
            android:layout_width="@dimen/dp_44"
            android:layout_height="@dimen/dp_56"
            android:background="@drawable/verify_code_box"
            />
        <EditText
            android:gravity="center"
            android:textSize="@dimen/sp_30"
            android:id="@+id/et_four"
            android:numeric="integer"
            android:maxLength="1"
            android:layout_marginLeft="@dimen/dp_37"
            android:layout_width="@dimen/dp_44"
            android:layout_height="@dimen/dp_56"
            android:background="@drawable/verify_code_box"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_loading"
        android:visibility="gone"
        android:layout_below="@id/layout_num"
        android:layout_marginTop="@dimen/dp_45"
        android:text="@string/Please_later"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/gFA6A13"
        android:layout_width="@dimen/dp_59"
        android:layout_height="@dimen/dp_20"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
